# regexEngine

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  main.cpp  main.h
src/engine/: CMakeLists.txt  automata.cpp  automata.h  engine.h  parser.h  state.cpp  state.h  transition.cpp  transition.h
src/engine/parser/: parser.cpp  parser.h
src/engine/states/: state.cpp  state.h
src/engine/transitions/: transition.cpp  transition.h
test/: CMakeLists.txt
test/src/: State_tests.cpp  Transition_tests.cpp  Transition_tests.h  automata_tests.cpp  parser_tests.cpp  regexEngine_tests.cpp
test/src/engine/: engine_tests.cpp
